[package]
name = "continuum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openai_chatgpt_api = "0.1"
fakeyou = "0.1.1"
serde_json = "1.0.96"
tokio = { version = "1", features = ["full"] }
chatgpt_rs = "1.1.7"
serde = "1.0.163"
bincode = "1.3.3"
